# snap_cam_ros

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  SUPPLEMENTAL  calibrator.patch  fix_transport_plugin_deps.sh  package.xml  snap_cam_nodelet.xml  stereo_nodelet.xml
cfg/: SnapCam.cfg
include/snap_cam_ros/: snap_cam.hpp
launch/: downward.launch  four_cameras.launch  fpv.launch  hires.launch  qvga.launch  right.launch  stereo.launch
src/: snap_cam.cpp  snap_cam_node.cpp  snap_cam_nodelet.cpp  stereo_nodelet.cpp
